fix imports/styles broken in merge

--- a/src/app/ControlPanel/Items/ItemTitle.scss
+++ b/src/app/ControlPanel/Items/ItemTitle.scss
@@ -1,6 +1,4 @@
-@use "./UnitSummary.scss";
 .item-title {
-  @include UnitSummary.colors;
   height: 32px;
   margin-bottom: 6px;
   min-width: 120px;
@@ -26,10 +24,11 @@
     color: var(--text-color-2);
   }
   
-  &.equippable {
+  &.clickable {
     cursor: pointer;
-    &:hover {
-      font-weight: bold;
+    &:hover .name {
+      // text appears bold without changing container width
+      text-shadow: 0px 0px 3px var(--text-color);
     }
   }
 }
